[package]
name = "postgres_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["macros"] }
warp = "0.3.5"
mobc-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
mobc = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2.9"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
reqwest = "0.11.19"
anyhow = "1.0.75"

[dev-dependencies]
listenfd ="1.0" # hot reload # systemfd --no-pid -s http::3000 -- cargo watch -x run
